--- a/static/css/message.css
+++ b/static/css/message.css
@@ -1,25 +1,12 @@
 .message {
-    opacity: 0;
-    width: 300px;
-    height: auto;
-    margin: auto;
-    padding: 7px;
-    top: -80px;
-    left: -10px;
+    background-color: #efefef;
+        padding: 20px;
+        border-radius: 5px;
     text-align: center;
-    border: 1px solid rgba(255,137,255,.4);
-    border-radius: 12px;
-    background-color: rgba(255,137,255,.2);
-    box-shadow: 0 3px 15px 2px rgba(255,137,255,.4);
-    font-size: 13px;
-    font-weight: 400;
-    text-overflow: ellipsis;
-    text-transform: uppercase;
-    overflow: hidden;
-    position: absolute;
-    animation-delay: 5s;
-    animation-duration: 50s;
-    animation-iteration-count: infinite;
-    animation-name: shake;
-    animation-timing-function: ease-in-out;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+        font-family: "Comic Sans MS";
+    }
+    
+    .message-text {
+        height: 100%;
 }
