feat: main qt interface done

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,10 @@
 
     <body onload="InitLive2D()">
         <div>
-            <div class="message" style="height:60px; width:300px;">
+            <div class="message" style="height:60px; width:260px;">
                 <div class="message-text" style="opacity:0;"></div>
             </div>
-            <canvas id="mycanvas" width="300" height="500" style="border:dashed 1px #CCC;"></canvas>
+            <canvas id="mycanvas" width="300" height="500"></canvas>
         </div>
 
         <form id="user_input_form" action="#">
